@@ -153,14 +153,14 @@ C_output( const char * filename,
         return 0;
     }
 
-    fprintf( fn, "/** Header file generated by fdesign on %s **/\n\n",
-             fl_now( ) );
-
-    fprintf( fn, "#ifndef %s_h_\n#define %s_h_\n\n",
+    fprintf( fn, "/* Header file generated by fdesign on %s */\n\n"
+                 "#ifndef %s_h_\n"
+                 "#define %s_h_\n\n"
+                 "#include <%s>\n",
+             fl_now( ),
              get_fd_name( forms[ 0 ].fname ),
-             get_fd_name( forms[ 0 ].fname ) );
-
-    fprintf( fn, "#include <%s>\n", xform_header );
+             get_fd_name( forms[ 0 ].fname ),
+             xform_header );
 
     for ( i = 0; i < fnumb && ! use_glcanvas; i++ )
     {
@@ -176,20 +176,18 @@ C_output( const char * filename,
     if ( use_glcanvas )
         fprintf( fn, "#include <%s>\n", glcanvas_header );
 
-    fprintf( fn, "\n/** Callbacks, globals and object handlers **/\n\n" );
+    fprintf( fn, "\n/* Callbacks, globals and object handlers */\n\n" );
 
     for ( i = 0; i < fnumb; i++ )
         print_callbacks_and_globals( fn, forms[ i ].form, 0 );
 
-    fprintf( fn, "\n/**** Forms and Objects ****/\n\n" );
+    fprintf( fn, "\n/* Forms and Objects */\n\n" );
     for ( i = 0; i < fnumb; i++ )
         print_header( fn, forms[ i ].form, forms[ i ].fname );
 
     if ( fdopt.altformat )
-    {
-        fprintf( fn, "\n/**** Creation Routine ****/\n\n" );
-        fprintf( fn, "extern void %s( void );\n", main_name );
-    }
+        fprintf( fn, "\n/* Creation Routine */\n\n"
+                     "extern void %s( void );\n", main_name );
 
     fprintf( fn, "\n#endif /* %s_h_ */\n", get_fd_name( forms[ 0 ].fname ) );
     fclose( fn );
@@ -217,9 +215,9 @@ C_output( const char * filename,
         return 0;
     }
 
-    fprintf( fn, "/* Form definition file generated by fdesign. */\n\n" );
-    fprintf( fn, "#include <stdlib.h>\n" );
-    fprintf( fn, "#include \"%s.h\"\n", name_only );
+    fprintf( fn, "/* Form definition file generated by fdesign */\n\n"
+                 "#include <stdlib.h>\n"
+                 "#include \"%s.h\"\n", name_only );
 
     reset_dupinfo_cache( );
 
@@ -311,7 +309,7 @@ C_output( const char * filename,
 
 
 
-/*** Some attributes query routines ***/
+/* Some attributes query routines */
 
 #define VN( v )    { v, #v, NULL, NULL }
 #define PVN( v )   v, #v
